assets/css/styles.css
:root {
  --primary-color: #de0a34;
  --text-dark: #212121;
  --text-medium: #666666;
  --text-light: #ffffff;
  --background-light: #f5f5f5;
  --shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
}

body,
html {
  margin: 0;
  padding: 0;
  font-family: "Montserrat", sans-serif;
  background-color: var(--background-light);
}

.container {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 20px;
}

.pokedex-header {
  background-color: var(--primary-color);
  padding: 20px 0;
}

.logo-container {
  display: flex;
  align-items: center;
  margin-bottom: 20px;
}

.logo-image {
  width: 40px;
  height: 40px;
  margin-right: 10px;
  filter: drop-shadow(0 0 3px var(--text-light));
}

.logo-text {
  color: var(--text-light);
  font-size: 24px;
  margin: 0;
}

.search-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.search-box {
  display: flex;
  align-items: center;
  background-color: var(--text-light);
  border-radius: 20px;
  padding: 5px 15px;
  flex-grow: 1;
  margin-right: 10px;
}

.search-icon,
.clear-search-icon {
  width: 20px;
  height: 20px;
}

.clear-search-icon {
  cursor: pointer;
}

.search-input {
  border: none;
  padding: 5px 10px;
  margin: 5px 15px;
  font-size: 1em;
  flex-grow: 1;
}

.search-input:focus {
  outline: 3px solid #f8d030;
  border-radius: 10px;
}

.generation-filter-btn {
  background-color: var(--text-light);
  border: none;
  border-radius: 20px;
  padding: 7px 20px;
  font-size: 1em;
  color: var(--primary-color);
  font-weight: bold;
  cursor: pointer;
  display: flex;
  align-items: center;
}

.filter-icon {
  width: 20px;
  height: 20px;
  margin-right: 5px;
}

.generation-dropdown {
  position: absolute;
  background-color: var(--text-light);
  border-radius: 10px;
  padding: 7px 15px;
  box-shadow: var(--shadow);
  z-index: 10;
}

.filter-title {
  font-weight: bold;
  margin: 10px 0;
  color: var(--text-medium);
  font-size: 0.8em;
}

.checkbox-group label {
  display: block;
  margin-bottom: 5px;
}

.checkbox-group {
  accent-color: var(--primary-color);
}

/* content */

.pokemon-grid {
  padding: 20px 0;
}

.pokemon-list {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
  gap: 20px;
}

.pokemon-card {
  background: var(--text-light);
  background: linear-gradient(165deg, var(--text-light) 50%, #efefff 50%);
  border-radius: 10px;
  padding: 20px;
  text-align: center;
  box-shadow: var(--shadow);
  cursor: pointer;
  transition: transform 0.2s;
}

.pokemon-card:hover {
  transform: translateY(-7px);
}

.pokemon-card:hover .pokemon-name {
  color: var(--primary-color);
  scale: 1.1;
}

.pokemon-image {
  width: 120px;
  height: 120px;
}

.pokemon-number {
  color: var(--text-medium);
  font-size: 0.7em;
  text-align: end;
  margin: 0;
}

.pokemon-name {
  color: var(--text-dark);
  font-size: 1.1em;
  margin: 5px 0;
}

.not-found-message {
  text-align: center;
  font-size: 20px;
  color: var(--text-medium);
  margin-top: 50px;
}

/* modal */

.modal {
  display: none;
  position: fixed;
  z-index: 100;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.5);
}

.modal-content {
  background-color: var(--text-light);
  margin: 3% auto;
  padding: 0;
  border-radius: 10px;
  max-width: 500px;
  position: relative;
  overflow: hidden;
}

.close-modal {
  color: var(--text-light);
  position: absolute;
  top: 10px;
  right: 20px;
  font-size: 28px;
  font-weight: bold;
  cursor: pointer;
  z-index: 10;
}

.pokemon-header {
  padding: 20px;
  color: var(--text-light);
  text-align: center;
}

.pokemon-header h2 {
  margin: 0 0 20px 0;
}

.pokemon-header h2 span {
  font-size: 0.6em;
  margin-left: 10px;
  vertical-align: middle;
}

.navigation-arrows {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 20px;
}

.nav-arrow {
  background: none;
  border: none;
  cursor: pointer;
}

.pokemon-det-img {
  width: 200px;
  height: 200px;
}

.pokemon-types {
  display: flex;
  justify-content: center;
  gap: 10px;
}

.type-badge {
  padding: 5px 15px;
  border-radius: 20px;
  color: var(--text-light);
  font-weight: bold;
  font-size: small;
  box-shadow: 0 0px 5px 0px var(--text-light);
  opacity: 0.9;
}

.pokemon-details {
  padding: 20px;
}

.pokemon-details h2 {
  color: var(--text-dark);
  margin-bottom: 10px;
}

.pokemon-description {
  color: var(--text-medium);
  margin-bottom: 20px;
}

.pokemon-info {
  display: flex;
  justify-content: space-between;
  margin-bottom: 45px;
}

.pokemon-details .info-label {
  color: var(--text-medium);
  font-size: 0.9em;
  opacity: 0.8;
  width: 25px;
  height: 25px;
  margin: 15px 0;
}

.info-value {
  color: var(--text-dark);
  font-size: 0.9em;
  font-weight: bold;
  margin: 0;
}

.stat-item {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 10px;
  position: relative;
  font-weight: bold;
}

.info-item {
  text-align: center;
}

.stats-container {
  margin-top: 20px;
}

.stat-name {
  color: var(--text-medium);
  font-size: 0.8em;
  padding-left: 10px;
}

.stat-value {
  color: var(--text-dark);
  font-weight: bold;
  opacity: 0.9;
  padding-right: 10px;
}

.stat-line {
  position: absolute;
  left: 0;
  right: 0;
  bottom: -3px;
  height: 1px;
  background-color: var(--text-medium);
  opacity: 0.3;
}

.hidden {
  display: none;
}

/* back to top */

.scroll-to-top {
  position: fixed;
  bottom: 20px;
  right: 20px;
  width: 50px;
  height: 50px;
  background-color: var(--primary-color);
  border: none;
  border-radius: 5px;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: center;
  transition: transform 0.5s ease;
  opacity: 0;
  visibility: hidden;
  transform: scale(1);
}

.scroll-to-top.show {
  opacity: 1;
  visibility: visible;
}

.scroll-to-top:hover {
  transform: scale(1.2);
}

.scroll-to-top .scroll-icon {
  width: 24px;
  height: 24px;
}

